--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
   <strong>
   Example Script - Serial Port ( <a href="https://github.com/atom-iot/SerialPort_Web">https://github.com/atom-iot/SerialPort_Web )</a><br/>
-  Navigator.Serial  ( <a href="https://developer.mozilla.org/en-US/docs/Web/API/Navigator">https://developer.mozilla.org/en-US/docs/Web/API/Navigator</a> ) 
+  Navigator.Serial  ( <a href="https://wicg.github.io/serial/">https://wicg.github.io/serial/</a> ) 
   </strong>
   <hr/>
 
@@ -20,7 +20,7 @@
     <option value="38400">38400</option>
     <option value="57600">57600</option>
     <option value="74880">74880</option>
-    <option value="74880">74880</option>
+    <option value="115200">115200</option>
   </select>
   <button class="btn" id="connect-to-serial">Connect with Serial Device</button>
 
@@ -127,7 +127,7 @@
         sendText.value = "";
     }
 
-
+AT
   </script>
 </body>
 </html>
